@@ -15,6 +15,12 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+utils/mapper.c: new option, "-regionslink", to generate a .dot file containing
+ relationship between regions. New option "-noworldmap" to not generate the full
+ world map. Use region's longname instead of the short name in regions index.
+ Change world map size from 30xtiles to 50xtiles.
+Nicolas Weeger, 2008-01-26
+
 .cvsignore files created in types subdirectories and svn:ignore set.
 Kevin Bulgrien
   
